# Self

./: .env.example  .gitignore  README.md  example_self_correction.py  minimal_agi_demo.py  practical_self_correction_scenarios.py  pyproject.toml  pytest.ini  requirements.txt  self_correction_utils.py  start_self_agi.bat  start_self_agi.sh
.trae/rules/: self.md
backend/: __init__.py  alembic.ini  create_admin.py  create_missing_tables.py  database_migration.py  gunicorn_config.py  main.py  migrate_auth_tables.py  migrate_demonstration_tables.py  migrate_market_tables.py  migrate_robot_tables.py  state_manager.py  test_auth_import.py  test_hash.py  test_knowledge_base.py  test_login_direct.py  test_model.py  test_system_control.py  verify_hash.py
checkpoints/: test_checkpoint.pt
deployment_configs/: deploy_1773383862_master.json  deploy_1773384279_single_node.json  deploy_1773384379_worker.json
docs/: README.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
hardware/: __init__.py  advanced_robot_control.py  arduino_firmware_example.ino  arduino_serial_example.py  gazebo_simulation.py  generic_robot_adapter.py  hardware_factory.py  hardware_monitor.py  real_robot_interface.py  robot_controller.py  robot_vision_control.py  simulation.py  unified_interface.py  unified_simulation.py
models/: __init__.py  chemistry_reasoning.py  deep_thinking_engine.py  embeddings.py  finance_reasoning.py  medical_reasoning.py  model_compression_quantization.py  physics_reasoning.py  planner.py  quaternion_core.py  quaternion_data_pipeline.py  quaternion_dataset.py  quaternion_integration.py  quaternion_nn.py  quaternion_optimizer.py  quaternion_validation.py  reasoning_engine.py  robot_multimodal_control.py  self_agi_orchestrator.py  spatial_reasoning.py
monitoring/: prometheus.yml
scripts/: download_real_data.py
training/: __init__.py  adaptive_learning_validator.py  adaptive_loss_balancer.py  architecture_search_hpo.py  capability_enhancement.py  checkpoint_manager.py  curriculum_exploration.py  data_augmentation.py  deploy_distributed.py  distributed_training.py  error_detection_performance.py  external_api_framework.py  gazebo_environment.py  generative_trainer.py  imitation_learning.py  laplacian_benchmark.py  laplacian_enhanced_system.py  laplacian_enhanced_training.py  laplacian_integration.py  laplacian_regularization.py  large_scale_pretraining_pipeline.py  meta_learning.py  multimodal_integration.py  multimodal_trainer.py  multitask_learning.py  pinn_cnn_automl.py  professional_domain_capabilities.py  quaternion_training_pipeline.py  real_multimodal_dataset.py  reinforcement_learning.py  report_generator.py  resource_predictor.py  resource_scheduler.py  self_learning_manager.py  test_laplacian_enhanced_training.py  trainer.py  training_alert_system.py  training_server.py  unified_training_manager.py  update_laplacian_imports.py  (+1 more)
(+418 files in other folders)
